2009-04-06  Evi Vanoost <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: Simplified agent access to reduce looping
	
	* reporting/pChart/pChart.class: Found problem where the graph was
	looping with certain data when the Scale1 was exactly 1

2009-04-06  Sancho Lerena <slerena@artica.es>

	* godmode/setup/setup.php
	* godmode/setup/setup_visuals.php
	* include/config_process.php,
	* include/functions_config.php: Added new parameter for status icons. 
	Old config (fontpath and attachment dir are now manageable in setup).

	* include/functions_ui.php,
	godmode/servers/modificar_server.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php
	operation/agentes/bulbs.php
	operation/agentes/estado_monitores.php
	operation/agentes/tactical.php
	operation/servers/view_server.php: Added support for custom status
	images.

	* images/status_sets: Added three new status images pack: Default color
	icons, faces and color with text.
	
	* reporting/fgraph.php: Temporal FIX for problem in access graphs that
	takes 100% Apache CPU !!!. Need final fix for this.
	
2009-04-03  Sancho Lerena <slerena@artica.es>

	*  include/functions_alerts.php: Fixed another notice.

	* include/functions_reporting.php,
	* include/functions_db.php: Fixed a notice who breaks the PDF report.
	Added homeurl preffix to some includes that breaks PDF reporting.

	* pandora_console_upgrade: Fixedd issue with old-style config.php.

	* godmode/alerts/alert_list.php: Fixed bad combo values (ID insted names).

2009-04-02  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: Final DB changes proposed for closing this month the DB
	scheme. tagente-> new server_name field to assign server (old fields will
	be removed).  talert_templates has two new types (warning, critical).
	tevento has "user_comment" new field. Tserver has three new fields, 
	server_type (so some old fields will be deleted), threads and queued_modules